[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Common/Enemies/Sentry/Sentry.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 2000.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 63.9261, 20.0281 )

[node name="Sentry" type="StaticBody2D"]
collision_layer = 513
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AttackRange" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.152941 )
position = Vector2( 0, -22.6786 )
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 1 )

[node name="Head" type="Sprite" parent="."]
position = Vector2( 0, -21.2547 )
texture = ExtResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="Head"]
show_behind_parent = true
enabled = true
cast_to = Vector2( 0, -2000 )
collision_mask = 17

[node name="Line2D" type="Line2D" parent="Head/RayCast2D"]
visible = false
points = PoolVector2Array( 0, -1.124, -0.873413, -46.1508 )
default_color = Color( 1, 0, 0, 1 )

[node name="Base" type="Sprite" parent="."]
modulate = Color( 0.431373, 0.431373, 0.431373, 1 )
scale = Vector2( 2.04056, 0.72128 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]
